samples/_failures_safe/1761077004_814fb0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_45393a6e.c: In function ‘main’:
./samples/SAFE/__tmp_45393a6e.c:157:31: error: missing terminating " character
  157 |             a.rows = read_int("Enter rows for matrix A (1-10):
      |                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_45393a6e.c:157:13: error: expected expression at end of input
  157 |             a.rows = read_int("Enter rows for matrix A (1-10):
      |             ^
./samples/SAFE/__tmp_45393a6e.c:157:22: error: too few arguments to function ‘read_int’
  157 |             a.rows = read_int("Enter rows for matrix A (1-10):
      |                      ^~~~~~~~
./samples/SAFE/__tmp_45393a6e.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_45393a6e.c:157:13: error: expected declaration or statement at end of input
  157 |             a.rows = read_int("Enter rows for matrix A (1-10):
      |             ^
./samples/SAFE/__tmp_45393a6e.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_45393a6e.c:157:13: error: expected declaration or statement at end of input
